# propresenter-music

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: README.md  REPORT.md  results.json
data/: bench_colored.json  bench_colored2.json  bench_latency.json  bench_live_cross.json  bench_studio.json  bench_studio_grace.json  bench_studio_margin.json  bench_studio_partial.json  bench_studio_sliding.json  bench_studio_triggerfix.json  example_manifest.json  live_manifest.json  studio_manifest.json
notebooks/: README.md  explore_mert_embeddings.ipynb
src/ppsync/: __init__.py  aligner.py  audio_capture.py  cli.py  config.py  dtw.py  embed.py  hmm.py  io.py  logconf.py  preprocess.py  rigid.py  telemetry.py  transform.py  trigger.py  windows.py
tests/: test_dtw.py  test_hmm.py  test_io.py  test_pp_live.py  test_rigid.py  test_transform.py  test_trigger.py  test_windows.py
tools/: benchmark.py  benchmark_report.py  diag_embed.py  diag_phase.py  generate_test_audio.py  latency_benchmark.py  pp_to_manifest.py  pp_trigger_test.py
webapp/: README.md  analysis.html  index.html  server.py
