[tool.poetry]
name = "ppsync"
version = "0.1.0"
description = "Real-time music alignment and slide advancement for ProPresenter"
authors = ["scaperoth@berkeley.edu"]
packages = [{ include = "ppsync", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.7.0"
torchaudio = "2.7.0"
transformers = ">=4.35"
numpy = ">=1.24"
soundfile = ">=0.12"
scipy = ">=1.10"
tqdm = ">=4.64"
sounddevice = ">=0.4"
requests = ">=2.28"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"

[tool.poetry.scripts]
ppsync-preprocess = "ppsync.cli:preprocess_main"
ppsync-align = "ppsync.cli:align_main"
ppsync-eval = "ppsync.cli:eval_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
